--- a/.github/workflows/deploy-streamlit.yml
+++ b/.github/workflows/deploy-streamlit.yml
@@ -1,44 +1,41 @@
-# Name the GitHub Action
 name: Deploy via Snowflake CLI
 
 on:
-push:
+  push:
     branches:
-    - main
+      - main
 
 env:
-PYTHON_VERSION: '3.9'
+  PYTHON_VERSION: '3.11'
 
 jobs:
-build-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     environment: dev
+
     steps:
-    - name: 'Checkout GitHub Action'
-    uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Install Python
-    uses: actions/setup-python@v4
-    with:
-        python-version: 3.11
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: 'Install Snowflake CLI'
-    shell: bash
-    run: |
-        python -m pip install --upgrade pip
-        pip install snowflake-cli
+      - name: Install Snowflake CLI
+        run: |
+          python -m pip install --upgrade pip
+          pip install snowflake-cli
 
-    - name: 'Create config'
-    shell: bash
-    env:
-        SNOWFLAKE_PASSWORD: ${{ secrets.SNOWCLI_PW }}
-    run: |
-        mkdir -p ~/.snowflake
-        cp config.toml ~/.snowflake/config.toml
-        echo "password = \"$SNOWFLAKE_PASSWORD\"" >> ~/.snowflake/config.toml
-        chmod 0600 ~/.snowflake/config.toml
+      - name: Configure Snowflake CLI
+        env:
+          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWCLI_PW }}
+        run: |
+          mkdir -p ~/.snowflake
+          cp config.toml ~/.snowflake/config.toml
+          echo 'password = "${SNOWFLAKE_PASSWORD}"' >> ~/.snowflake/config.toml
+          chmod 0600 ~/.snowflake/config.toml
 
-    - name: 'Deploy the Streamlit app'
-    shell: bash
-    run: |
-        snow streamlit deploy --replace
+      - name: Deploy the Streamlit app
+        run: |
+          snow streamlit deploy --replace
