--- a/.github/workflows/deploy-streamlit.yml
+++ b/.github/workflows/deploy-streamlit.yml
@@ -33,8 +33,17 @@ jobs:
         run: |
           mkdir -p ~/.snowflake
           cp config.toml ~/.snowflake/config.toml
-          echo 'password = "${SNOWFLAKE_PASSWORD}"' >> ~/.snowflake/config.toml
+          # Remove existing password line if any
+          sed -i '/^password =/d' ~/.snowflake/config.toml
+          # Append password with variable expanded
+          echo "password = \"${SNOWFLAKE_PASSWORD}\"" >> ~/.snowflake/config.toml
           chmod 0600 ~/.snowflake/config.toml
+      
+      - name: View Snowflake config.toml (for debugging)
+        run: |
+          echo "----- Snowflake config.toml contents -----"
+          cat ~/.snowflake/config.toml
+          echo "------------------------------------------"
 
       - name: Deploy the Streamlit app
         run: |
